CMAKE_MINIMUM_REQUIRED(VERSION 3.11)
set(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_COMPILER /usr/bin/g++)
PROJECT(Bookstore)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/)
ADD_EXECUTABLE(code src/UnrolledLinkedList.h src/BookSystem.cpp src/UserSystem.cpp src/Utils.cpp src/BookstoreSystem.cpp src/main.cpp)
